--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = extern/pybind11
 	url = git@github.com:pybind/pybind11.git
 	branch = stable
+[submodule "extern/astrocat_debiasing"]
+	path = extern/astrocat_debiasing
+	url = https://github.com/eggls6/astrocat_debiasing
+	branch = main
