updated apparent state calculation and started on orbit fit testing

--- a/.gitignore
+++ b/.gitignore
@@ -182,6 +182,9 @@ cython_debug/
 *.app
 
 ################################### Individual user exceptions
+# data file for astrometric catalog debiasing
+bias.dat
+
 # VS code setup directory
 .vscode/
 
