--- a/.gitmodules
+++ b/.gitmodules
@@ -4,5 +4,5 @@
 	branch = stable
 [submodule "extern/astrocat_debiasing"]
 	path = extern/astrocat_debiasing
-	url = https://github.com/rahil-makadia/astrocat_debiasing
+	url = git@github.com:rahil-makadia/astrocat_debiasing.git
 	branch = main
