added new kernels and grss directory for python dev

--- a/.gitignore
+++ b/.gitignore
@@ -194,8 +194,11 @@ bias*.dat
 # cspice library in the external directory
 extern/cspice
 
-# custom portable spice kernels and their log files
+# excepted/custom portable spice kernels and their log files
+!naif0012.tls
 !planets_big16_de431_1950_2350.bsp
 !planets_big16_de441_1950_2350.bsp
 !planets_big16_de431_1950_2350.log
 !planets_big16_de441_1950_2350.log
+!planets_big16_de431_1950_2350.tm
+!planets_big16_de441_1950_2350.tm
