--- a/.gitignore
+++ b/.gitignore
@@ -185,6 +185,9 @@ cython_debug/
 *.app
 
 ################################### Individual user exceptions
+# gperftools profiler output
+*.prof
+
 # data file for astrometric catalog debiasing
 bias*.dat
 
