--- a/environment.yml
+++ b/environment.yml
@@ -3,14 +3,15 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - astropy
-  - astroquery
-  - healpy
+  - astropy>=5.0
+  - astroquery>=0.4.0
+  - healpy>=1.16.0
   - ipykernel
   - jupyter
-  - matplotlib
-  - numba
-  - numpy
-  - pandas
+  - matplotlib>=3.3.0
+  - numba>=0.55.0
+  - numpy>=1.22.0
+  - pandas>=1.5.0
   - python=3.10
-  - spiceypy
+  - requests>=2.22.0
+  - spiceypy>=5.0.0
