created pipeline to push grss to test pypi

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,10 @@
 # minimum required CMake version
 cmake_minimum_required(VERSION 3.19.0)
 
-# set C and C++ compilers for Apple M1 - openmp issues
-# if (APPLE)
-#     set(CMAKE_C_COMPILER "gcc-12")
-#     set(CMAKE_CXX_COMPILER "g++-12")
-# endif()
-
-# set the project name and version
-project(grss VERSION 0.1.0)
+# set the project name and get version from version.txt
+file(READ "version.txt" ver)
+message(STATUS "GRSS version: ${ver}")
+project(grss VERSION ${ver})
 
 # specify the C++ standard and compiler flags
 # TODO: add gprof profiling, iee standards for floats
@@ -35,9 +31,3 @@ include(CPack)
 pybind11_add_module(cpp${PROJECT_NAME} src/${PROJECT_NAME}.cpp)
 target_link_libraries(cpp${PROJECT_NAME} PRIVATE ${PROJECT_NAME})
 target_compile_definitions(cpp${PROJECT_NAME} PRIVATE VERSION_INFO=${${PROJECT_NAME}_VERSION})
-
-# copy pybind11 module to grss directory
-add_custom_command(TARGET cpp${PROJECT_NAME} POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:cpp${PROJECT_NAME}> ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/$<TARGET_FILE_NAME:cpp${PROJECT_NAME}>
-    # COMMENT "Copying pybind11 module to grss directory"
-)
