--- a/.gitignore
+++ b/.gitignore
@@ -203,13 +203,12 @@ tiles*.dat
 extern/cspice
 
 # excepted/custom portable spice kernels and their log files
-!latest_leapseconds.tls
 !planets_big16_de431_1950_2350.bsp
 !planets_big16_de441_1950_2350.bsp
 !planets_big16_de431_1950_2350.log
 !planets_big16_de441_1950_2350.log
-# !planets_big16_de431_1950_2350.tm
-# !planets_big16_de441_1950_2350.tm
+!planets_big16_de431_1950_2350.tm
+!planets_big16_de441_1950_2350.tm
 
 # beta fit results directory
 multi_fit/
