--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,36 @@
+[project]
+name = "grss"
+dynamic = ["version"]
+authors = [{name = "Rahil Makadia"}, {email = "makadia2@illinois.edu"}]
+description = "GRSS: Gauss-Radau Small-body Simulator"
+readme = "README.md"
+requires-python = ">=3.7"
+dependencies=[
+        "astropy>=5.0",
+        "astroquery>=0.4.0",
+        "healpy>=1.16.0",
+        "matplotlib>=3.3.0",
+        "numba>=0.55.0",
+        "numpy>=1.22.0",
+        "pandas>=1.5.0",
+        "requests>=2.22.0",
+        "spiceypy>=5.0.0",
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Science/Research",
+    "Topic :: Scientific/Engineering :: Astronomy",
+    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+    "Programming Language :: Python :: 3",
+    "Operating System :: MacOS :: MacOS X",
+    "Operating System :: POSIX :: Linux",
+    "Operating System :: Unix",
+]
+license = {file = "LICENSE"}
+keywords = ["astronomy", "asteroids", "integrator", "orbit determination"]
+
+[project.urls]
+"Homepage" = "https://github.com/rahil-makadia/grss"
+
 [build-system]
 requires = ["setuptools"]
