--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,7 +13,7 @@ jobs:
             - name: Install dependencies
               run: |
                     python -m pip install --upgrade pip
-                    pip install sphinx sphinx-copybutton
+                    pip install sphinx sphinx-copybutton sphinx-gallery nbsphinx
             - name: Build docs
               run: |
                     cd docs
