--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,10 +10,11 @@ jobs:
               uses: actions/setup-python@v3
               with:
                 python-version: '3.7'
-            - name: Install dependencies
+            - name: Install dependencies and GRSS
               run: |
                     python -m pip install --upgrade pip
                     pip install sphinx sphinx-copybutton sphinx-gallery nbsphinx
+                    pip install .
             - name: Build docs
               run: |
                     cd docs
