--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,6 +14,7 @@ jobs:
               run: |
                     python -m pip install --upgrade pip
                     pip install sphinx sphinx-copybutton sphinx-gallery nbsphinx
+                    sh initialize.sh
                     pip install .
             - name: Build docs
               run: |
