--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,7 +15,7 @@ jobs:
             - name: Install dependencies and GRSS
               run: |
                     python -m pip install --upgrade pip
-                    pip install sphinx sphinx-copybutton sphinx-gallery nbsphinx
+                    pip install sphinx sphinx-copybutton sphinx-gallery nbsphinx pandoc
                     sh initialize.sh
                     pip install .
             - name: Build docs
