--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,10 +15,11 @@ jobs:
             - name: Install dependencies and GRSS
               run: |
                     python -m pip install --upgrade pip
-                    pip install sphinx sphinx-copybutton sphinx-gallery nbsphinx pandoc
+                    pip install sphinx sphinx-copybutton sphinx-gallery nbsphinx
                     sh initialize.sh
                     pip install .
             - name: Build docs
+              uses: docker://pandoc/core:2.9
               run: |
                     cd docs
                     make clean html
