--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,15 +12,12 @@ jobs:
               uses: actions/setup-python@v3
               with:
                 python-version: '3.8'
-            - name: Install dependencies and GRSS
+            - name: Install dependencies and build GRSS
               run: |
                     python -m pip install --upgrade pip
                     pip install sphinx sphinx-copybutton sphinx-gallery nbsphinx
                     sh initialize.sh
                     pip install .
-            - name: Build docs
-              uses: docker://pandoc/core:2.9
-              run: |
                     cd docs
                     make clean html
                     cd ..
