--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,6 +14,7 @@ jobs:
                 python-version: '3.8'
             - name: Install dependencies and build GRSS
               run: |
+                    conda env create -f environment.yml
                     python -m pip install --upgrade pip
                     pip install sphinx sphinx-copybutton sphinx-gallery nbsphinx
                     sh initialize.sh
