--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,10 +13,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
-      # - name: Setup python
-      #   uses: actions/setup-python@v3
-      #   with:
-      #     python-version: '3.8'
       - name: Install dependencies and build GRSS
         run: |
           brew update
@@ -33,6 +29,7 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: docs/build/html # The folder the action should deploy.
+          publish_branch: gh-pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: docs/build/html
+          force_orphan: true
