--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -16,7 +16,10 @@ jobs:
         matrix:
           os: [ubuntu-latest, macos-latest]
       steps:
-        - uses: actions/checkout@v3
+        - name: Checkout repo
+          uses: actions/checkout@v3
+          with:
+            submodules: true
         - name: Set up Python
           uses: actions/setup-python@v4
           with:
@@ -31,7 +34,10 @@ jobs:
       needs: build
       runs-on: macos-latest
       steps:
-        - uses: actions/checkout@v3
+        - name: Checkout repo
+          uses: actions/checkout@v3
+          with:
+            submodules: true
         - name: Set up Python
           uses: actions/setup-python@v4
           with:
