--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,4 +37,5 @@ requires = ["setuptools"]
 
 [tool.cibuildwheel]
 # Skip 32-bit Linux builds
-skip = ["*-manylinux_i686", "*-musllinux_i686]
+skip = "*-manylinux_i686"
+skip = "*-musllinux_i686"
