--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,4 @@ keywords = ["astronomy", "asteroids", "integrator", "orbit determination"]
 requires = ["setuptools"]
 
 [tool.cibuildwheel]
-# Skip 32-bit Linux builds
-skip = "*-manylinux_i686"
-skip = "*-musllinux_i686"
+skip = ["*-manylinux_i686", "*-musllinux_i686"]
