--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -52,12 +52,13 @@ jobs:
         - name: Show files
           run: ls -l dist
         - name: Publish to Test PyPI
+          if: github.ref == 'refs/heads/dev'
           uses: pypa/gh-action-pypi-publish@release/v1
           with:
             password: ${{ secrets.TEST_PYPI_API_TOKEN }}
             repository-url: https://test.pypi.org/legacy/
         - name: Publish to PyPI
-          if: startsWith(github.ref, 'refs/tags')
+          if: github.ref == 'refs/heads/main'
           uses: pypa/gh-action-pypi-publish@release/v1
           with:
             password: ${{ secrets.PYPI_API_TOKEN }}
