--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -14,7 +14,7 @@ jobs:
       runs-on: ${{ matrix.os }}
       strategy:
         matrix:
-          os: [ubuntu-latest, macos-13]
+          os: [ubuntu-latest, macos-latest]
       steps:
         - name: Checkout repo
           uses: actions/checkout@v3
@@ -47,7 +47,7 @@ jobs:
         - name: Download MacOS distribution from previous job
           uses: actions/download-artifact@master
           with:
-            name: dist-macos-13
+            name: dist-macos-latest
             path: dist
         - name: Show files
           run: ls -l dist
