--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -26,7 +26,7 @@ jobs:
             python-version: "3.8"
         - name: Initialize repository
           run: |
-            source initialize.sh
+            source initialize.sh --no-tm-overwrite
         - name: Build python distributions
           run: source build_python.sh
         - name: Upload distribution for next job
