--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -1,15 +1,12 @@
-name: Python tests
+name: Unit tests
 on:
   push:
     branches:
       - main
       - dev
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  test:
+  python:
     runs-on: macos-latest
     steps:
       - name: Checkout repo
