added debug statement to c++ tests

--- a/.github/workflows/cpp_tests.yml
+++ b/.github/workflows/cpp_tests.yml
@@ -15,6 +15,7 @@ jobs:
           submodules: true
       - name: Build GRSS library
         run: |
+          echo ARCHFLAGS_BEFORE: $ARCHFLAGS
           source initialize.sh
           source build_cpp.sh -clean
       - name: Run tests
