switched c++ tests from mac to linux

--- a/.github/workflows/cpp_tests.yml
+++ b/.github/workflows/cpp_tests.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   prop-only:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -15,7 +15,6 @@ jobs:
           submodules: true
       - name: Build GRSS library
         run: |
-          echo ARCHFLAGS_BEFORE: $ARCHFLAGS
           source initialize.sh
           source build_cpp.sh -clean
       - name: Run tests
