--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -1,9 +1,12 @@
 name: Publish to PyPI
+# run when pushes are made to main or dev branches and there are changes in the grss/version.txt file
 on:
   push:
     branches:
       - main
       - dev
+    paths:
+      - "grss/version.txt"
 
 jobs:
     build:
