codecov 4: please work

--- a/tests/python/pytest.ini
+++ b/tests/python/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 minversion = 6.0
-addopts = -rA -q --cov
+addopts = -rA -q --cov --cov-report=xml
 python_files =
     fit/chesley.py
     fit/eggl.py
