--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -24,11 +24,10 @@ jobs:
           pip3 install .
       - name: Run tests
         run: |
-          python3 -m pip install jupyter ipykernel pytest pytest-cov
+          python3 -m pip install jupyter ipykernel
           python3 -m ipykernel install --user
           cd tests/python
-          source run_python_tests.sh
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          jupyter nbconvert --to script fit/*.ipynb
+          jupyter nbconvert --to script prop/*.ipynb
+          python fit/*.py
+          python prop/*.py
