updated plotting for orbit fits and min timestep handling

--- a/.github/workflows/cpp_tests.yml
+++ b/.github/workflows/cpp_tests.yml
@@ -20,5 +20,6 @@ jobs:
       - name: Run tests
         run: |
           cd tests/cpp/prop
+          ./apophis.out
           ./didymos.out
           ./spk_map.out
