--- a/.github/workflows/joss.yml
+++ b/.github/workflows/joss.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v1
         with:
-          name: paper
-          path: ../joss/joss_paper.pdf
+          name: joss_paper
+          path: ./joss/joss_paper.pdf
