--- a/.github/workflows/joss.yml
+++ b/.github/workflows/joss.yml
@@ -17,7 +17,7 @@ jobs:
         uses: openjournals/openjournals-draft-action@master
         with:
           journal: joss
-          paper-path: ../joss/joss_paper.md
+          paper-path: ./joss/joss_paper.md
       - name: Upload
         uses: actions/upload-artifact@v1
         with:
