--- a/.github/workflows/joss.yml
+++ b/.github/workflows/joss.yml
@@ -18,6 +18,10 @@ jobs:
         with:
           journal: joss
           paper-path: ./joss/joss_paper.md
+      - name: list files in both directories
+        run: |
+          ls -l
+          ls -l joss
       - name: Upload
         uses: actions/upload-artifact@v1
         with:
