--- a/.github/workflows/joss.yml
+++ b/.github/workflows/joss.yml
@@ -25,5 +25,5 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v1
         with:
-          name: joss_paper
-          path: ../joss/joss_paper.pdf
+          name: paper
+          path: ./joss/paper.pdf
